--- a/build.gradle
+++ b/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
     compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
     compile 'com.google.zxing:core:3.0.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
