--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -25,14 +26,14 @@
         </activity>
         <activity android:name=".LogInActivity"
             android:configChanges="orientation|screenSize">
-        </activity>
-        <activity android:name=".ChildActivity"
-            android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ChildActivity"
+            android:configChanges="orientation|screenSize" >
         </activity>
         <activity android:name=".NewVideoActivity"
             android:configChanges="orientation|screenSize"></activity>
