--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
         android:value="barcode" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -24,20 +26,27 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".LogInActivity"
-            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChildActivity"
+        <activity
+            android:name=".LogInActivity"
+            android:configChanges="orientation|screenSize">
+        </activity>
+        <activity
+            android:name=".ChildActivity"
+            android:configChanges="orientation|screenSize"></activity>
+        <activity
+            android:name=".NewVideoActivity"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".PreviewActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:configChanges="orientation|screenSize" >
         </activity>
-        <activity android:name=".NewVideoActivity"
-            android:configChanges="orientation|screenSize"></activity>
     </application>
 
 </manifest>
